--- a/package.json
+++ b/package.json
@@ -14,11 +14,13 @@
   },
   "devDependencies": {
     "aws-sdk": "^2.726.0",
+    "jest": "^26.3.0",
     "serverless-bundle": "2.0.0",
     "serverless-dotenv-plugin": "^2.1.1",
     "serverless-offline": "^5.3.3"
   },
   "dependencies": {
+    "stripe": "^8.84.0",
     "uuid": "^7.0.3"
   }
 }
